# the-investigation-kit

./: LICENSE  README.md  main.ipynb  main2.ipynb  pyproject.toml  record.md  requirements.txt
backend/: main.py
frontend/: app.js  index.html  styles.css
scripts/: how_to_run.py  manual_test_checklist.py  run_demo.py
tests/: test_fake_service.py  test_models.py  test_persistence.py  test_store.py
tik/: app.py
tik/core/: commands.py  document_renderer.py  models.py  persistence.py  store.py
tik/core/services/: api.py  base.py  fake.py
tik/data/: seed_case.json
tik/data/chunks/: doc_0001.json
tik/data/docs/: doc_0001.html
tik/theme/: qss.py
tik/ui/: shell.py
tik/ui/left/: graph_stub.py  profiler.py
tik/ui/overlays/: conflicts.py  logdock.py  objectives.py
tik/ui/right/: reader.py
tik/ui/right/widgets/: document_list.py  source_list.py
tik/ui/web/: __init__.py  base.html  highlight.js  style.css
tik/ui/widgets/: drop_zone.py  toast.py
